k8/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
    app: nodebb
  name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
