k8/nodebb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodebb
  labels:
    name: web
    app: nodebb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 4567
      protocol: TCP
  selector:
    app: nodebb
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
   name: nodebb
spec:
   replicas: 3
   template:
     metadata:
       labels:
         app: nodebb
         name: web         
     spec:
       containers:
       - name: nodebb
         image: sandbox02registry.azurecr.io/nodebb:v4
         command: ["/bin/bash"]
         args: ["-c", "./nodebb setup && ./nodebb start"]
         ports:
         - containerPort: 4567
